--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div style="text-align:center; width:650; font-family: DactylBold; font-size: 60pt; padding: 20px">
+<div style="text-align:center; font-family: DactylBold; font-size: 60pt; padding: 20px">
     <svg width="80" height="80" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
         <filter id="splot">
             <feTurbulence type="turbulence" baseFrequency="0.05" numOctaves="2" result="turbulence"/>
@@ -17,12 +17,25 @@
 <div class="flow">
 <a class="fade" href="https://github.com/terryspitz/dactyl-font"><img src="img/dactyl.png"><img src="img/dactylE.png">Dactyl Font</a>
 <a class="fade" href="https://terryspitz.github.io/Pool/public/index.html"><img src="img/pool.png"><img src="img/poolE.png">Pool caustics</a>
+<a class="fade" href="https://hackaday.io/project/19698-peace-clock"><img src="img/clock.png"><img src="img/clockE.png">Peace Clock</a>
+<a class="fade" href="https://www.youtube.com/watch?v=Z7vT3heLr1E&ab_channel=terryspitz"><img src="img/useless.jpg"><img src="img/uselessE.jpg">Useless machine</a>
+<a class="fade" href="https://hackaday.io/project/74922-tube-trainbus-bedside-departure-board"><img src="img/train.jpg"><img src="img/trainE.jpg">Bedside departure board</a>
+<a class="fade" href="https://hackaday.io/project/165395-conrad-the-camel-plays-foo-fighters"><img src="img/camel.jpg"><img src="img/camelE.jpg">Conrad the Camel</a>
 <a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/fontvolve/fontvolve.ipynb"><img src="img/fontvolve.png"><img src="img/fontvolveE.png">Fontvolve</a>
 <a class="fade" href="https://github.com/terryspitz/panbrowser"><img src="img/pan.png"><img src="img/panE.png">Pan browser</a>
-<a class="fade"><img src="img/.png">Conrad the Camel</a>
-<a class="fade"><img src="img/.png">ESP VGA Games</a>
-<a class="fade"><img src="img/.png">Peace Clock</a>
-<a class="fade"><img src="img/.png">Cookie cutters</a>
+<a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/deeper/README.md"><img src="img/deeper.jpg"><img src="img/deeperE.jpg">Deeper font</a>
+<a class="fade" href="https://www.thingiverse.com/thing:3840403"><img src="img/ring.jpg"><img src="img/ringE.jpg">Mobius ring</a>
+<a class="fade" href="https://github.com/terryspitz/3D/blob/master/google/cookies/big_G.stl"><img src="img/cookie.jpg"><img src="img/cookieE.jpg">Cookie cutters</a>
+<a class="fade" href="https://www.youtube.com/watch?v=QLkZRuE1284&ab_channel=terryspitz"><img src="img/mechnical_clock.jpg"><img src="img/mechnical_clockE.jpg">Digital Mechanical Clock</a>
+<a class="fade" href=""><img src="img/banger.jpg"><img src="img/bangerE.jpg">Banger and mash game</a>
+<a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg">Retina avocado grower</a>
+<a class="fade" href="https://github.com/terryspitz/ESP8266-VGA-Games"><img src="img/.png">ESP VGA Games</a>
+<!-- Rude/mood clock -->
+<!-- Donkey -->
+<!-- Blinds -->
+<!-- Temperature -->
+<!-- No Crisis logo -->
+<!-- <a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg"></a> -->
 </div>
 </body>
 <script>
