--- a/index.html
+++ b/index.html
@@ -15,26 +15,42 @@
     terryspitz.github.io
 </div>
 <div class="flow">
-<a class="fade" href="https://github.com/terryspitz/dactyl-font"><img src="img/dactyl.png"><img src="img/dactylE.png">Dactyl Font</a>
-<a class="fade" href="https://terryspitz.github.io/Pool/public/index.html"><img src="img/pool.png"><img src="img/poolE.png">Pool caustics</a>
-<a class="fade" href="https://hackaday.io/project/19698-peace-clock"><img src="img/clock.png"><img src="img/clockE.png">Peace Clock</a>
-<a class="fade" href="https://www.youtube.com/watch?v=Z7vT3heLr1E&ab_channel=terryspitz"><img src="img/useless.jpg"><img src="img/uselessE.jpg">Useless machine</a>
-<a class="fade" href="https://hackaday.io/project/74922-tube-trainbus-bedside-departure-board"><img src="img/train.jpg"><img src="img/trainE.jpg">Bedside departure board</a>
-<a class="fade" href="https://hackaday.io/project/165395-conrad-the-camel-plays-foo-fighters"><img src="img/camel.jpg"><img src="img/camelE.jpg">Conrad the Camel</a>
-<a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/fontvolve/fontvolve.ipynb"><img src="img/fontvolve.png"><img src="img/fontvolveE.png">Fontvolve</a>
-<a class="fade" href="https://github.com/terryspitz/panbrowser"><img src="img/pan.png"><img src="img/panE.png">Pan browser</a>
-<a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/deeper/README.md"><img src="img/deeper.jpg"><img src="img/deeperE.jpg">Deeper font</a>
-<a class="fade" href="https://www.thingiverse.com/thing:3840403"><img src="img/ring.jpg"><img src="img/ringE.jpg">Mobius ring</a>
-<a class="fade" href="https://github.com/terryspitz/3D/blob/master/google/cookies/big_G.stl"><img src="img/cookie.jpg"><img src="img/cookieE.jpg">Cookie cutters</a>
-<a class="fade" href="https://www.youtube.com/watch?v=QLkZRuE1284&ab_channel=terryspitz"><img src="img/mechnical_clock.jpg"><img src="img/mechnical_clockE.jpg">Digital Mechanical Clock</a>
-<a class="fade" href=""><img src="img/banger.jpg"><img src="img/bangerE.jpg">Banger and mash game</a>
-<a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg">Retina avocado grower</a>
-<a class="fade" href="https://github.com/terryspitz/ESP8266-VGA-Games"><img src="img/.png">ESP VGA Games</a>
+<a class="fade" href="https://github.com/terryspitz/dactyl-font">
+    <img src="img/dactyl.png"><img src="img/dactylE.png">Dactyl Font</a>
+<a class="fade" href="https://terryspitz.github.io/Pool/public/index.html">
+    <img src="img/pool.png"><img src="img/poolE.png">Pool caustics</a>
+<a class="fade" href="https://hackaday.io/project/19698-peace-clock">
+    <img src="img/clock.png"><img src="img/clockE.png">Peace Clock</a>
+<a class="fade" href="https://www.youtube.com/watch?v=Z7vT3heLr1E&ab_channel=terryspitz">
+    <img src="img/useless.jpg"><img src="img/uselessE.jpg">Useless machine</a>
+<a class="fade" href="https://hackaday.io/project/74922-tube-trainbus-bedside-departure-board">
+    <img src="img/train.jpg"><img src="img/trainE.jpg">Bedside departure board</a>
+<a class="fade" href="https://hackaday.io/project/165395-conrad-the-camel-plays-foo-fighters">
+    <img src="img/camel.jpg"><img src="img/camelE.jpg">Conrad the Camel</a>
+<a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/fontvolve/fontvolve.ipynb">
+    <img src="img/fontvolve.png"><img src="img/fontvolveE.png">Fontvolve</a>
+<a class="fade" href="https://github.com/terryspitz/panbrowser">
+    <img src="img/pan.png"><img src="img/panE.png">Pan browser</a>
+<a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/deeper/README.md">
+    <img src="img/deeper.jpg"><img src="img/deeperE.jpg">Deeper font</a>
+<a class="fade" href="https://www.thingiverse.com/thing:3840403">
+    <img src="img/ring.jpg"><img src="img/ringE.jpg">Mobius ring</a>
+<a class="fade" href="https://github.com/terryspitz/3D/blob/master/google/cookies/big_G.stl">
+    <img src="img/cookie.jpg"><img src="img/cookieE.jpg">Cookie cutters</a>
+<a class="fade" href="https://www.youtube.com/watch?v=QLkZRuE1284&ab_channel=terryspitz">
+    <img src="img/mechnical_clock.jpg"><img src="img/mechnical_clockE.jpg">Digital Mechanical Clock</a>
+<a class="fade" href="https://hackaday.io/project/176682-banger-and-mash">
+    <img src="img/banger.jpg"><img src="img/bangerE.jpg">Banger and mash game</a>
+<a class="fade" href="https://github.com/terryspitz/3D/blob/master/avocado/retina.png">
+    <img src="img/retina.jpg"><img src="img/retinaE.jpg">Retina avocado grower</a>
+<a class="fade" href="https://github.com/terryspitz/ESP8266-VGA-Games/blob/master/README.md">
+    <img src="img/games.jpg"><img src="img/gamesE.jpg">ESP VGA Games</a>
 <!-- Rude/mood clock -->
 <!-- Donkey -->
 <!-- Blinds -->
 <!-- Temperature -->
 <!-- No Crisis logo -->
+<!-- Music box -->
 <!-- <a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg"></a> -->
 </div>
 </body>
