--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <div style="text-align:center; font-family: DactylBold; font-size: 60pt; padding: 20px">
+    <!-- splot, from https://developer.mozilla.org/en-US/docs/Web/SVG/Element/feTurbulence -->
     <svg width="80" height="80" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
         <filter id="splot">
             <feTurbulence type="turbulence" baseFrequency="0.05" numOctaves="2" result="turbulence"/>
