White text looks nice

--- a/index.html
+++ b/index.html
@@ -17,35 +17,50 @@
 </div>
 <div class="flow">
 <a class="fade" href="https://github.com/terryspitz/dactyl-font">
-    <img src="img/dactyl.png"><img src="img/dactylE.png">Dactyl Font</a>
+    <img src="img/dactyl.png"><img src="img/dactylE.png">
+    <div class="content">Dactyl Font</div></a>
 <a class="fade" href="https://terryspitz.github.io/Pool/public/index.html">
-    <img src="img/pool.png"><img src="img/poolE.png">Pool caustics</a>
+    <img src="img/pool.png"><img src="img/poolE.png">
+    <div class="content">Pool caustics</div></a>
 <a class="fade" href="https://hackaday.io/project/19698-peace-clock">
-    <img src="img/clock.png"><img src="img/clockE.png">Peace Clock</a>
+    <img src="img/clock.png"><img src="img/clockE.png">
+    <div class="content">Peace Clock</div></a>
 <a class="fade" href="https://www.youtube.com/watch?v=Z7vT3heLr1E&ab_channel=terryspitz">
-    <img src="img/useless.jpg"><img src="img/uselessE.jpg">Useless machine</a>
+    <img src="img/useless.jpg"><img src="img/uselessE.jpg">
+    <div class="content">Useless machine</div></a>
 <a class="fade" href="https://hackaday.io/project/74922-tube-trainbus-bedside-departure-board">
-    <img src="img/train.jpg"><img src="img/trainE.jpg">Bedside departure board</a>
+    <img src="img/train.jpg"><img src="img/trainE.jpg">
+    <div class="content">Bedside departure board</div></a>
 <a class="fade" href="https://hackaday.io/project/165395-conrad-the-camel-plays-foo-fighters">
-    <img src="img/camel.jpg"><img src="img/camelE.jpg">Conrad the Camel</a>
+    <img src="img/camel.jpg"><img src="img/camelE.jpg">
+    <div class="content">Conrad the Camel</div></a>
 <a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/fontvolve/fontvolve.ipynb">
-    <img src="img/fontvolve.png"><img src="img/fontvolveE.png">Fontvolve</a>
+    <img src="img/fontvolve.png"><img src="img/fontvolveE.png">
+    <div class="content">Fontvolve</div></a>
 <a class="fade" href="https://github.com/terryspitz/panbrowser">
-    <img src="img/pan.png"><img src="img/panE.png">Pan browser</a>
+    <img src="img/pan.png"><img src="img/panE.png">
+    <div class="content">Pan browser</div></a>
 <a class="fade" href="https://github.com/terryspitz/ipython_notebooks/blob/master/deeper/README.md">
-    <img src="img/deeper.jpg"><img src="img/deeperE.jpg">Deeper font</a>
+    <img src="img/deeper.jpg"><img src="img/deeperE.jpg">
+    <div class="content">Deeper font</div></a>
 <a class="fade" href="https://www.thingiverse.com/thing:3840403">
-    <img src="img/ring.jpg"><img src="img/ringE.jpg">Mobius ring</a>
+    <img src="img/ring.jpg"><img src="img/ringE.jpg">
+    <div class="content">Mobius ring</div></a>
 <a class="fade" href="https://github.com/terryspitz/3D/blob/master/google/cookies/big_G.stl">
-    <img src="img/cookie.jpg"><img src="img/cookieE.jpg">Cookie cutters</a>
+    <img src="img/cookie.jpg"><img src="img/cookieE.jpg">
+    <div class="content">Cookie cutters</div></a>
 <a class="fade" href="https://www.youtube.com/watch?v=QLkZRuE1284&ab_channel=terryspitz">
-    <img src="img/mechnical_clock.jpg"><img src="img/mechnical_clockE.jpg">Digital Mechanical Clock</a>
+    <img src="img/mechnical_clock.jpg"><img src="img/mechnical_clockE.jpg">
+    <div class="content">Digital Mechanical Clock</div></a>
 <a class="fade" href="https://hackaday.io/project/176682-banger-and-mash">
-    <img src="img/banger.jpg"><img src="img/bangerE.jpg">Banger and mash game</a>
+    <img src="img/banger.jpg"><img src="img/bangerE.jpg">
+    <div class="content">Banger and mash game</div></a>
 <a class="fade" href="https://github.com/terryspitz/3D/blob/master/avocado/retina.png">
-    <img src="img/retina.jpg"><img src="img/retinaE.jpg">Retina avocado grower</a>
+    <img src="img/retina.jpg"><img src="img/retinaE.jpg">
+    <div class="content">Retina avocado grower</div></a>
 <a class="fade" href="https://github.com/terryspitz/ESP8266-VGA-Games/blob/master/README.md">
-    <img src="img/games.jpg"><img src="img/gamesE.jpg">ESP VGA Games</a>
+    <img src="img/games.jpg"><img src="img/gamesE.jpg">
+    <div class="content">ESP VGA Games</div></a>
 <!-- Rude/mood clock -->
 <!-- Donkey -->
 <!-- Blinds -->
