Better dactyl link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     terryspitz.github.io
 </div>
 <div class="flow">
-<a class="fade" href="https://github.com/terryspitz/dactyl-font">
+<a class="fade" href="https://terryspitz.github.io/dactyl-font/">
     <img src="img/dactyl.png"><img src="img/dactylE.png">
     <div class="content">Dactyl Font</div></a>
 <a class="fade" href="https://terryspitz.github.io/Pool/public/index.html">
