Implement animated pool Biggen boxes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div style="text-align:center; font-family: DactylBold; font-size: 60pt; padding: 20px">
@@ -20,7 +21,9 @@
     <img src="img/dactyl.png"><img src="img/dactylE.png">
     <div class="content">Dactyl Font</div></a>
 <a class="fade" href="https://terryspitz.github.io/Pool/public/index.html">
-    <img src="img/pool.png"><img src="img/poolE.png">
+    <!-- <img src="img/pool.png"> -->
+    <canvas id="canvas"></canvas>
+    <img src="img/poolE.png">
     <div class="content">Pool caustics</div></a>
 <a class="fade" href="https://hackaday.io/project/19698-peace-clock">
     <img src="img/clock.png"><img src="img/clockE.png">
@@ -62,12 +65,15 @@
     <img src="img/games.jpg"><img src="img/gamesE.jpg">
     <div class="content">ESP VGA Games</div></a>
 <!-- Rude/mood clock -->
+<!-- bit clock -->
 <!-- Donkey -->
 <!-- Blinds -->
 <!-- Temperature -->
 <!-- No Crisis logo -->
 <!-- Music box -->
-<!-- <a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg"></a> -->
+<!-- <a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg">
+    <div class="content"></div></a>-->
 </div>
+<script src="https://terryspitz.github.io/Pool/public/bundle.js"></script>
 </body>
 </html>
