--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
 <a class="fade" href="https://github.com/terryspitz/ESP8266-VGA-Games/blob/master/README.md">
     <img src="img/games.jpg"><img src="img/gamesE.jpg">
     <div class="content">ESP VGA Games</div></a>
+<a class="fade" href="https://www.youtube.com/watch?v=2LOjng6ZxVM&ab_channel=terryspitz">
+    <img src="img/musicbox.jpg"><img src="img/musicboxE.jpg">
+    <div class="content">Music box</div></a>
+    
 <!-- Rude/mood clock -->
 <!-- bit clock -->
 <!-- Donkey -->
 <!-- Blinds -->
 <!-- Temperature -->
 <!-- No Crisis logo -->
-<!-- Music box -->
 <!-- <a class="fade" href=""><img src="img/.jpg"><img src="img/.jpg">
     <div class="content"></div></a>-->
 </div>
