--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <svg width="80" height="80" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
         <filter id="splot">
             <feTurbulence type="turbulence" baseFrequency="0.05" numOctaves="2" result="turbulence"/>
-            <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="50" xChannelSelector="R" yChannelSelector="G"/>
+            <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="30" xChannelSelector="R" yChannelSelector="G"/>
         </filter>
-
-        <circle cx="100" cy="120" r="70" style="filter: url(#splot)"/>
+        <circle cx="100" cy="120" r="70" 
+            style="animation-name: pulse; animation-duration: 2s; animation-direction: normal; animation-iteration-count: infinite;
+                transition-timing-function: linear; filter: url(#splot)"/>
     </svg>
     terryspitz.github.io
 </div>
