animate the useless machine image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img src="img/clock.png"><img src="img/clockE.png">
     <div class="content">Peace Clock</div></a>
 <a class="fade" href="https://www.youtube.com/watch?v=Z7vT3heLr1E&ab_channel=terryspitz">
-    <img src="img/useless.jpg"><img src="img/uselessE.jpg">
+    <img src="img/uselessC.gif"><img src="img/uselessE.jpg">
     <div class="content">Useless machine</div></a>
 <a class="fade" href="https://hackaday.io/project/74922-tube-trainbus-bedside-departure-board">
     <img src="img/train.jpg"><img src="img/trainE.jpg">
